@@ -13,57 +13,85 @@ import modelo.Usuario;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class LoginController {
 
     @FXML private ComboBox<String> comboUsuarios;
+    @FXML private ComboBox<String> comboRol;
     @FXML private PasswordField campoPassword;
     @FXML private Label etiquetaError;
 
     private final UsuarioDao usuarioDAO = new UsuarioDao();
-
     private List<Usuario> usuarios;
 
+    // ================= INIT =================
     @FXML
     public void initialize() {
+        etiquetaError.setVisible(false);
+        cargarRoles();
         cargarUsuarios();
     }
 
+    // ================= ROLES =================
+    private void cargarRoles() {
+        comboRol.getItems().addAll("ADMIN", "CAJERO", "BARISTA");
+    }
+
+    // ================= USUARIOS =================
     private void cargarUsuarios() {
+
         usuarios = usuarioDAO.listar();
 
         comboUsuarios.setItems(
                 FXCollections.observableArrayList(
                         usuarios.stream()
                                 .map(Usuario::getUsuario)
-                                .toList()
+                                .collect(Collectors.toList())
                 )
         );
     }
+
+    // ================= LOGIN =================
     @FXML
     public void handleLogin(javafx.event.ActionEvent event) {
 
+        etiquetaError.setVisible(false);
+
         String usuarioSeleccionado = comboUsuarios.getValue();
+        String rolSeleccionado = comboRol.getValue();
         String password = campoPassword.getText();
 
-        if (usuarioSeleccionado == null || password.isEmpty()) {
-            mostrarError("Selecciona usuario y contraseña.");
+        if (usuarioSeleccionado == null || rolSeleccionado == null || password.isEmpty()) {
+            mostrarError("Completa usuario, rol y contraseña.");
             return;
         }
 
         Usuario u = usuarioDAO.autenticar(usuarioSeleccionado, password);
 
         if (u != null) {
+
+            if (!u.getRol().name().equals(rolSeleccionado)) {
+                mostrarError("El rol no coincide con el usuario.");
+                return;
+            }
+
             abrirDashboard(event, u);
+
         } else {
-            mostrarError("Contraseña incorrecta.");
+            mostrarError("Usuario o contraseña incorrectos.");
             campoPassword.clear();
         }
     }
+
+    // ================= DASHBOARD =================
     private void abrirDashboard(javafx.event.ActionEvent event, Usuario usuario) {
 
         try {
-            FXMLLoader loader = new FXMLLoader(getClass().getResource("/vista/dashboard.fxml"));
+            FXMLLoader loader = new FXMLLoader(
+                    getClass().getResource("/vista/dashboard.fxml")
+            );
+
             Parent root = loader.load();
 
             DashboardController ctrl = loader.getController();
@@ -75,9 +103,11 @@ public class LoginController {
             stage.show();
 
         } catch (IOException e) {
-            mostrarError("Error al abrir sistema.");
+            mostrarError("Error al abrir sistema: " + e.getMessage());
         }
     }
+
+    // ================= ERROR =================
     private void mostrarError(String msg) {
         etiquetaError.setText(msg);
         etiquetaError.setVisible(true);
